--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   line_icons: ^2.0.3
   share_plus: ^7.2.1
   razorpay_flutter: ^1.3.6
+  awesome_notifications: ^0.9.2
+  shared_preferences:
+  firebase_auth:
+  firebase_core:
+#  paystack_manager:
+  get:
   font_awesome_flutter:
   getwidget:
 
